--- a/layout/md/md-style.less
+++ b/layout/md/md-style.less
@@ -3,12 +3,15 @@
 }
 
 @rootF: 20px;
+@lineH: 1.35;
 
 .tc-line,
 .ineo-input{
-    line-height: 1.5;
+    min-height: @lineH*1em + 0;
     margin: 0.25em 0;
-    padding: 0.25em @rootF*0.5;
+    padding: 0;
+
+    line-height: @lineH;
     &.h*{
         font-weight: bold;
     }
