正常顺序的code p empry的渲染

--- a/layout/md/md-style.less
+++ b/layout/md/md-style.less
@@ -41,7 +41,16 @@
         padding-left: 2*@rootF - 4px;
     }
 
-    &.pre.code{
-        background-color: #384047;
+    &.code-block{
+        background-color: lighten(#384047, 20%);
+        color: #f5f5f5;
+        margin: 0;
+        
+        // 待进一步完善
+        
+        // margin: -1em 0 1em 0;
+        // &.first{
+        // margin-top: 1em;
+        // }
     }
 }
