input编辑定位 range的操作函数

--- a/layout/editor/common.less
+++ b/layout/editor/common.less
@@ -1,18 +1,17 @@
-.tc-line,
-.ineo-input{
-    min-height: 1.5*1em + 0.25em*2;
+.tc-line{
     padding: 0.25em 0.5em;
+}
+.tc-line,
+.ineo .ineo-input{
     font-size: 20px;
     line-height: 1.5;
     font-family: "Anonymous Pro";
 
-    &.heading-l1{}
-    &.heading-l2{}
-    &.heading-l3{}
-    &.heading-l4{}
-    &.heading-l5{}
-    &.quote{}
-    &.list{}
-    &.code-block{}
     // inline的那些样式就暂时没办法了... 斜体 粗体 inline代码...
+}
+.ineo{
+    min-height: 1.5*1em;
+    .ineo-input{
+        height: 1.5em;
+    }
 }
