--- a/layout/editor/ineo.less
+++ b/layout/editor/ineo.less
@@ -1,9 +1,18 @@
-.ineo-input{
-    display: block;
-    width: 100%;
-    height: 0;
-    resize: none;
+.ineo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    transition: transform 200ms ease;
 
-    border: none;
-    outline: none;
+    .ineo-input{
+        width: 100%;
+        min-height: 100%;
+        padding: 0 2em;
+        
+        resize: none;
+
+        border: none;
+        outline: none;
+    }
 }
