--- a/layout/md/md-style.less
+++ b/layout/md/md-style.less
@@ -1,17 +1,14 @@
+// 只管markdown标签的样式
+
 *{
     box-sizing: border-box;
 }
 
-@lineH: 1.35;
+@lineH: 1.5;
 
-.tc-line{
-    padding: 0;
-}
 .tc-line,
-.ineo .ineo-input{
-    margin: 0.25em 0;
-
-    line-height: @lineH;
+.ineo .ineo-input,
+.ineo .size-gen{
     &.h*{
         font-weight: bold;
     }
@@ -53,8 +50,4 @@
         // margin-top: 1em;
         // }
     }
-}
-
-.ineo .ineo-input{
-    margin: 0;
 }
