点击空白到最后一行 点击line进入编辑 带入内容 定位鼠标指针 更新高度

--- a/layout/editor/dev.less
+++ b/layout/editor/dev.less
@@ -19,9 +19,11 @@
             opacity: 0.5;
         }
     }
-    
-    // 给输入框着色
-    .ineo-input{
-        background-color: #f3f3f3;
+    .ineo{
+        transition: transform 150ms ease;
+        // 给输入框着色
+        .ineo-input{
+            background-color: #f3f3f3;
+        }
     }
 }
