--- a/layout/editor/ineo.less
+++ b/layout/editor/ineo.less
@@ -3,12 +3,11 @@
     top: 0;
     left: 0;
     right: 0;
-    transition: transform 200ms ease;
     
     .ineo-input,
     .size-gen{
         width: 100%;
-        padding: 0 2em;
+        padding: 0 40px;
         word-break: break-all;
     }
 
@@ -25,7 +24,7 @@
 
     .size-gen{
         position: absolute;
-        // top: 0;
+        top: 0;
         left: 0;
         right: 0;
         z-index: -10;
